# Weather-Station

./: README.md
app/: CMakeLists.txt  Kconfig  README.rst  prj.conf
app/boards/: weather_nucleo_wl55jc.overlay  wst_nucleo_wl55jc.overlay
app/dts/bindings/: wst,sensor-config.yaml  wst,sensor.yaml
app/include/: wst_sensor_types.h
app/src/: main.c  wst_app_thread.c  wst_app_thread.h  wst_cayenne_lpp.c  wst_cayenne_lpp.h  wst_events.c  wst_events.h  wst_io_thread.c  wst_io_thread.h  wst_key_driver.c  wst_key_driver.h  wst_led_driver.c  wst_led_driver.h  wst_lorawan.c  wst_lorawan.h  wst_main_threads.h  wst_sensor_config.c  wst_sensor_config.h  wst_sensor_thread.c  wst_sensor_thread.h  wst_sensor_utils.c  wst_sensor_utils.h  wst_shared.c  wst_shared.h  wst_supervisor_thread.c  wst_user_thread.c
app/tests/sim/wst_sensor_sim/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/sim/wst_sensor_sim/boards/: native_sim.conf  native_sim.overlay
app/tests/sim/wst_sensor_sim/src/: main.c  wst_app_thread.c  wst_sensor_config.c
app/tests/unit/wst_cayenne_lpp/decode/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/unit/wst_cayenne_lpp/decode/src/: fixture.h  main.c
app/tests/unit/wst_cayenne_lpp/encode/: CMakeLists.txt  testcase.yaml
app/tests/unit/wst_cayenne_lpp/encode/src/: fixture.h  main.c  test_barometer.c  test_humidity_sensor.c  test_illuminance_sensor.c  test_input_output.c  test_temperature_sensor.c
app/tests/unit/wst_cayenne_lpp/mocks/: assert.c  assert.h
